--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@material-ui/icons": "^4.5.1",
     "@reach/router": "^1.2.1",
     "apollo-boost": "^0.4.4",
-    "graphql": "^14.5.8",
-    "node-sass": "^4.13.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "graphql": "^15.5.0",
+    "node-sass": "^4.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-scripts": "3.4.0",
+    "showdown": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
